consistent FVP description (#67)
* consistent FVP description
#fix https://github.com/ARM-software/vscode-cmsis-csolution/issues/389
Consistent description of models: https://arm-software.github.io/AVH/main/simulation/html/index.html
* remove redundant value

--- a/registry/debug-adapters.yml
+++ b/registry/debug-adapters.yml
@@ -397,59 +397,41 @@ debug-adapters:
             yml-node: model
             type: enum
             values:
-              - name: Corstone-300
-                value: FVP_Corstone_SSE-300
+              - name: FVP_Corstone_SSE-300
                 description: Arm Corstone-300 Reference Platform with Cortex-M55
-              - name: Corstone-300 with Ethos-U55
-                value: FVP_Corstone_SSE-300_Ethos-U55
+              - name: FVP_Corstone_SSE-300_Ethos-U55
                 description: Arm Corstone-300 Reference Platform with Cortex-M55 and Ethos-U55
               - name: FVP_Corstone_SSE-300_Ethos-U65
-                value: Corstone-300 with Ethos-U65
                 description: Arm Corstone-300 Reference Platform with Cortex-M55 and Ethos-U65
-              - name: Corstone-310
-                value: FVP_Corstone_SSE-310
+              - name: FVP_Corstone_SSE-310
                 description: Arm Corstone 310 Reference Platform with Cortex-M85 and Ethos-U55
-              - name: Corstone-310 with Ethos-U65
-                value: FVP_Corstone_SSE-310_Ethos-U65
+              - name: FVP_Corstone_SSE-310_Ethos-U65
                 description: Arm Corstone-310  Reference Platform with Cortex-M85 and Ethos-U65
-              - name: Corstone-315
-                value: FVP_Corstone_SSE-315
+              - name: FVP_Corstone_SSE-315
                 description: Arm Corstone-315 Reference Platform with Cortex-M85, Ethos-U65, and Mali-C55
-              - name: Corstone-320
-                value: FVP_Corstone_SSE-320
+              - name: FVP_Corstone_SSE-320
                 description: Arm Corstone-320 Reference Platform with Cortex-M85, Ethos-U85, and Mali-C55
-              - name: MPS2 Cortex-M0
-                value: FVP_MPS2_Cortex-M0
+              - name: FVP_MPS2_Cortex-M0
                 description: Arm Microcontroller Prototyping System (MPS2) with Cortex-M0
-              - name: MPS2 Cortex-M0plus
-                value: FVP_MPS2_Cortex-M0plus
+              - name: FVP_MPS2_Cortex-M0plus
                 description: Arm Microcontroller Prototyping System (MPS2) with Cortex-M0plus
-              - name: MPS2 Cortex-M3
-                value: FVP_MPS2_Cortex-M3
+              - name: FVP_MPS2_Cortex-M3
                 description: Arm Microcontroller Prototyping System (MPS2) with Cortex-M3
-              - name: MPS2 Cortex-M4
-                value: FVP_MPS2_Cortex-M4
+              - name: FVP_MPS2_Cortex-M4
                 description: Arm Microcontroller Prototyping System (MPS2) with Cortex-M4
-              - name: MPS2 Cortex-M7
-                value: FVP_MPS2_Cortex-M7
+              - name: FVP_MPS2_Cortex-M7
                 description: Arm Microcontroller Prototyping System (MPS2) with Cortex-M7
-              - name: MPS2 Cortex-M23
-                value: FVP_MPS2_Cortex-M23
+              - name: FVP_MPS2_Cortex-M23
                 description: Arm Microcontroller Prototyping System (MPS2) with Cortex-M23
-              - name: MSP2 Cortex-M33
-                value: FVP_MPS2_Cortex-M33
+              - name: FVP_MPS2_Cortex-M33
                 description: Arm Microcontroller Prototyping System (MPS2) with Cortex-M33
-              - name: MPS2 Cortex-M35P
-                value: FVP_MPS2_Cortex-M35P
+              - name: FVP_MPS2_Cortex-M35P
                 description: Arm Microcontroller Prototyping System (MPS2) with Cortex-M35P
-              - name: MPS2 Cortex-M52
-                value: FVP_MPS2_Cortex-M52
+              - name: FVP_MPS2_Cortex-M52
                 description: Arm Microcontroller Prototyping System (MPS2) with Cortex-M52
-              - name: MPS2 Cortex-M55
-                value: FVP_MPS2_Cortex-M55
+              - name: FVP_MPS2_Cortex-M55
                 description: Arm Microcontroller Prototyping System (MPS2) with Cortex-M55
-              - name: MPS2 Cortex-M85
-                value: FVP_MPS2_Cortex-M85
+              - name: FVP_MPS2_Cortex-M85
                 description: Arm Microcontroller Prototyping System (MPS2) with Cortex-M85
             default: FVP_MPS2_Cortex-M3
           - name: Config File
