telnet mode default set value
Updated default value for Telnet Mode from 'Serial Monitor' to 'monitor' and changed pname-options to 'on'.

--- a/registry/debug-adapters.yml
+++ b/registry/debug-adapters.yml
@@ -34,13 +34,13 @@ debug-adapters:
         description: Serial input/output via semihosting or RTT channel 0
         yml-node: telnet
         select: on
-        pname-options:
+        pname-options: on
         options:
           - name: Telnet Mode
             description: Configure Serial I/O redirect
             yml-node: mode
             type: enum
-            default: Serial Monitor
+            default: monitor
             values:
               - name: Telnet Server
                 value: server
@@ -319,7 +319,7 @@ debug-adapters:
             description: Configure Serial I/O redirect
             yml-node: mode
             type: enum
-            default: Serial Monitor
+            default: monitor
             values:
               - name: Telnet Server
                 value: server
