--- a/registry/debug-adapters.yml
+++ b/registry/debug-adapters.yml
@@ -34,7 +34,7 @@ debug-adapters:
         description: Serial input/output via semihosting or RTT channel 0
         yml-node: telnet
         select: on
-        pname-options: on
+        pname-options:
         options:
           - name: Telnet Mode
             description: Configure Serial I/O redirect
