Add telnet user-interface pyOCD and jlink (#75)
* Add files via upload

* Fix schema issues

* Enable select option for Telnet section

* telnet mode default set value

Updated default value for Telnet Mode from 'Serial Monitor' to 'monitor' and changed pname-options to 'on'.

* Add `pname-options` to schema

---------

Co-authored-by: Daniel Brondani <daniel.brondani@arm.com>

--- a/registry/debug-adapters.yml
+++ b/registry/debug-adapters.yml
@@ -30,10 +30,37 @@ debug-adapters:
                 value: swd
                 description: Use Serial Wire Debug (SWD) interface (2 pins)
             default: swd
+      - section: Telnet
+        description: Serial input/output via semihosting or RTT channel 0
+        yml-node: telnet
+        select: on
+        pname-options:
+        options:
+          - name: Telnet Mode
+            description: Configure Serial I/O redirect
+            yml-node: mode
+            type: enum
+            default: monitor
+            values:
+              - name: Telnet Server
+                value: server
+                description:  Serial I/O to Telnet server port
+              - name: Debug Console
+                value: console
+                description:  Serial output to console (Debug console in VS Code)
+              - name: Serial Monitor
+                value: monitor
+                description:  Serial I/O via TCP/IP port to VS Code Serial Monitor
+              - name: Text File
+                value: file
+                description:  Serial output to file (default ./out/<solution-name>+<target-type>.<pname>.out)
+              - name: Disabled
+                value: off
+                description:  Serial I/O disabled
 
   - name: "ULINKplus@pyOCD"
     alias-name: ["ULINKplus"]                              # alternative names that map to this debug adapter
-    template: CMSIS-DAP-pyOCD.adapter.json                 # template files  (initally same as CMSIS-DAP@pyOCD)
+    template: CMSIS-DAP-pyOCD.adapter.json                 # template files  (initially same as CMSIS-DAP@pyOCD)
     gdbserver:                                             # add gdbserver: node under debugger: in cbuild-run.yml
     defaults:                                              # default values to use when nowhere specified
       port: 3333                                           # default value of first gdbserver port
@@ -65,7 +92,7 @@ debug-adapters:
 
   - name: "MCU-Link@pyOCD"
     alias-name: ["MCU-Link"]                               # alternative names that map to this debug adapter
-    template: CMSIS-DAP-pyOCD.adapter.json                 # template files  (initally same as CMSIS-DAP@pyOCD)
+    template: CMSIS-DAP-pyOCD.adapter.json                 # template files  (initially same as CMSIS-DAP@pyOCD)
     gdbserver:                                             # add gdbserver: node under debugger: in cbuild-run.yml
     defaults:                                              # default values to use when nowhere specified
       port: 3333                                           # default value of first gdbserver port
@@ -97,7 +124,7 @@ debug-adapters:
 
   - name: "Nu-Link@pyOCD"
     alias-name: ["Nu-Link", "Nu-Link-Pro"]                 # alternative names that map to this debug adapter
-    template: CMSIS-DAP-pyOCD.adapter.json                 # template files  (initally same as CMSIS-DAP@pyOCD)
+    template: CMSIS-DAP-pyOCD.adapter.json                 # template files  (initially same as CMSIS-DAP@pyOCD)
     gdbserver:                                             # add gdbserver: node under debugger: in cbuild-run.yml
     defaults:                                              # default values to use when nowhere specified
       port: 3333                                           # default value of first gdbserver port
@@ -129,7 +156,7 @@ debug-adapters:
 
   - name: "PICkit@pyOCD"
     alias-name: ["PICkit Basic"]                           # alternative names that map to this debug adapter
-    template: CMSIS-DAP-pyOCD.adapter.json                 # template files  (initally same as CMSIS-DAP@pyOCD)
+    template: CMSIS-DAP-pyOCD.adapter.json                 # template files  (initially same as CMSIS-DAP@pyOCD)
     gdbserver:                                             # add gdbserver: node under debugger: in cbuild-run.yml
     defaults:                                              # default values to use when nowhere specified
       port: 3333                                           # default value of first gdbserver port
@@ -161,7 +188,7 @@ debug-adapters:
 
   - name: "KitProg3@pyOCD"
     alias-name: ["KitProg3"]                               # alternative names that map to this debug adapter
-    template: CMSIS-DAP-pyOCD.adapter.json                 # template files  (initally same as CMSIS-DAP@pyOCD)
+    template: CMSIS-DAP-pyOCD.adapter.json                 # template files  (initially same as CMSIS-DAP@pyOCD)
     gdbserver:                                             # add gdbserver: node under debugger: in cbuild-run.yml
     defaults:                                              # default values to use when nowhere specified
       port: 3333                                           # default value of first gdbserver port
@@ -283,6 +310,26 @@ debug-adapters:
                 value: swd
                 description: Use Serial Wire Debug (SWD) interface (2 pins)
             default: swd
+      - section: Telnet
+        description: Serial input/output via semihosting
+        yml-node: telnet
+        select: on
+        options:
+          - name: Telnet Mode
+            description: Configure Serial I/O redirect
+            yml-node: mode
+            type: enum
+            default: monitor
+            values:
+              - name: Telnet Server
+                value: server
+                description:  Serial I/O to Telnet server port
+              - name: Debug Console
+                value: console
+                description:  Serial output to console (Debug console in VS Code)
+              - name: Serial Monitor
+                value: monitor
+                description:  Serial I/O via TCP/IP port to VS Code Serial Monitor
 
   - name: "CMSIS-DAP@Arm-Debugger"
     alias-name: ["CMSIS-DAP@armdbg"]
