--- a/registry/debug-adapters.yml
+++ b/registry/debug-adapters.yml
@@ -531,9 +531,10 @@ debug-adapters:
                 description: Use Serial Wire Debug (SWD) interface (2 pins)
             default: swd
       - section: Telnet
-        description: Serial input/output via semihosting
+        description: Serial input/output via semihosting or RTT channel 0
         yml-node: telnet
         select: on
+        pname-options:
         options:
           - name: Telnet Mode
             description: Configure Serial I/O redirect
