--- a/registry/debug-adapters.yml
+++ b/registry/debug-adapters.yml
@@ -504,7 +504,7 @@ debug-adapters:
       telnet:
         active:                                            # add telnet: node under debugger: in cbuild-run.yml
         port: 4444
-        mode: monitor
+        mode: off
       protocol: swd
       clock: 4000000
     user-interface:
@@ -531,9 +531,10 @@ debug-adapters:
                 description: Use Serial Wire Debug (SWD) interface (2 pins)
             default: swd
       - section: Telnet
-        description: Serial input/output via semihosting
+        description: Serial input/output via semihosting or RTT channel 0
         yml-node: telnet
         select: on
+        pname-options:
         options:
           - name: Telnet Mode
             description: Configure Serial I/O redirect
@@ -550,6 +551,9 @@ debug-adapters:
               - name: Serial Monitor
                 value: monitor
                 description:  Serial I/O via TCP/IP port to VS Code Serial Monitor
+              - name: Disabled
+                value: off
+                description:  Serial I/O disabled
 
   - name: "CMSIS-DAP@Arm-Debugger"
     alias-name: ["CMSIS-DAP@armdbg"]
